--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-   
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-  
+
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body>
@@ -101,9 +101,9 @@
               </h2>
               <p class="btm_par_medium">Save $400 Now</p>
             </div>
-
-            <div>
-              <p class="btm_par_last">
+           <button class="btm_btn"> SHOP NOW</button>
+            <div class="btm_par_last">
+              <p>
                 *See site for details, pricing from 3/2 to 3/29 while supplies
                 last
               </p>
