--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
 
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./src/styles/style.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -46,19 +46,19 @@
                   “The first time I used the Samsung Bespoke Jet™, I cried. I’m
                   not being sensational; I really did. Of course, this vacuum
                   worked great. But that’s not all.”
-                  <span class="read_more">Read more...</span>
+                  <button class="read_more">Read more...</button>
                 </p>
                 <p class="frame_text">
                   “If you’re an over-cleaner, like myself, you’ll nerd out on
                   all of the functions. If you avoid this chore at all costs,
                   you’ll appreciate how simple Samsung makes it.”
-                  <span class="read_more">Read more...</span>
+                  <button class="read_more">Read more...</button>
                 </p>
                 <p class="frame_text">
                   “Both the floor and pet hair attachments are cleverly designed
                   to eliminate the dreaded hair wrap. (In other words, you’ll
                   never have to tackle hair tangles with a pair of scissors
-                  again.)” <span class="read_more">Read more...</span>
+                  again.)” <button class="read_more">Read more...</button>
                 </p>
                 <p class="frame_text">
                   “When I learned the Samsung Bespoke Vac cleaned itself with
@@ -66,13 +66,13 @@
                   spider legs and hair out of the crevices with my hands. Its
                   suction power is so strong, the canister is left perfectly
                   clean after every use. It’s like a vacuum for your vacuum.”
-                  <span class="read_more">Read more...</span>
+                  <button class="read_more">Read more...</button>
                 </p>
                 <p class="frame_text">
                   “Because it’s so nice-looking, it can live right in the
                   kitchen. No more hauling a vacuum up and down the basement
                   stairs on the daily”
-                  <span class="read_more">Read more...</span>
+                  <button class="read_more">Read more...</button>
                 </p>
               </div>
             </div>
@@ -101,7 +101,7 @@
               </h2>
               <p class="btm_par_medium">Save $400 Now</p>
             </div>
-           <button class="btm_btn"> SHOP NOW</button>
+            <button class="btm_btn">SHOP NOW</button>
             <div class="btm_par_last">
               <p>
                 *See site for details, pricing from 3/2 to 3/29 while supplies
